# libsnark

./: .bazelrc  .gitignore  .ignore  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE
bzl/: vars.bzl
bzl/host/: BUILD.bazel
libsnark/: BUILD.bazel
libsnark/common/: BUILD.bazel
libsnark/common/data_structures/: BUILD.bazel
libsnark/common/default_types/: BUILD.bazel
libsnark/common/routing_algorithms/: BUILD.bazel
libsnark/common/routing_algorithms/tests/: BUILD.bazel
libsnark/gadgetlib1/: BUILD.bazel
libsnark/gadgetlib1/examples/: BUILD.bazel
libsnark/gadgetlib1/gadgets/: BUILD.bazel
libsnark/gadgetlib1/gadgets/cpu_checkers/fooram/: BUILD.bazel
libsnark/gadgetlib1/gadgets/cpu_checkers/tinyram/: BUILD.bazel
libsnark/gadgetlib1/gadgets/curves/: BUILD.bazel
libsnark/gadgetlib1/gadgets/fields/: BUILD.bazel
libsnark/gadgetlib1/gadgets/hashes/: BUILD.bazel
libsnark/gadgetlib1/gadgets/hashes/knapsack/: BUILD.bazel
libsnark/gadgetlib1/gadgets/hashes/sha256/: BUILD.bazel
libsnark/gadgetlib1/gadgets/merkle_tree/: BUILD.bazel
libsnark/gadgetlib1/gadgets/merkle_tree/tests/: BUILD.bazel
libsnark/gadgetlib1/gadgets/pairing/: BUILD.bazel
libsnark/gadgetlib1/gadgets/routing/: BUILD.bazel
libsnark/gadgetlib1/gadgets/routing/profiling/: BUILD.bazel
libsnark/gadgetlib1/gadgets/set_commitment/: BUILD.bazel
libsnark/gadgetlib1/gadgets/set_commitment/tests/: BUILD.bazel
libsnark/gadgetlib1/gadgets/verifiers/: BUILD.bazel
libsnark/gadgetlib1/gadgets/verifiers/tests/: BUILD.bazel
libsnark/gadgetlib1/tests/: BUILD.bazel
libsnark/gadgetlib2/: BUILD.bazel  integration.hpp
libsnark/gadgetlib2/examples/: BUILD.bazel  tutorial.cpp
libsnark/gadgetlib2/tests/: BUILD.bazel  constraint_UTEST.cpp  integration_UTEST.cpp  variable_UTEST.cpp
libsnark/knowledge_commitment/: BUILD.bazel
libsnark/reductions/bacs_to_r1cs/: BUILD.bazel
libsnark/reductions/r1cs_to_qap/: BUILD.bazel
libsnark/reductions/r1cs_to_sap/: BUILD.bazel
libsnark/reductions/ram_to_r1cs/: BUILD.bazel
libsnark/reductions/ram_to_r1cs/examples/: BUILD.bazel
libsnark/reductions/ram_to_r1cs/gadgets/: BUILD.bazel
libsnark/reductions/tbcs_to_uscs/: BUILD.bazel
libsnark/reductions/uscs_to_ssp/: BUILD.bazel
libsnark/relations/: BUILD.bazel
libsnark/relations/arithmetic_programs/qap/: BUILD.bazel
libsnark/relations/arithmetic_programs/qap/tests/: BUILD.bazel
libsnark/relations/arithmetic_programs/sap/: BUILD.bazel
libsnark/relations/arithmetic_programs/sap/tests/: BUILD.bazel
libsnark/relations/arithmetic_programs/ssp/: BUILD.bazel
libsnark/relations/arithmetic_programs/ssp/tests/: BUILD.bazel
libsnark/relations/circuit_satisfaction_problems/bacs/: BUILD.bazel
libsnark/relations/circuit_satisfaction_problems/bacs/examples/: BUILD.bazel
libsnark/relations/circuit_satisfaction_problems/tbcs/: BUILD.bazel
libsnark/relations/circuit_satisfaction_problems/tbcs/examples/: BUILD.bazel
libsnark/relations/constraint_satisfaction_problems/r1cs/: BUILD.bazel
libsnark/relations/constraint_satisfaction_problems/r1cs/examples/: BUILD.bazel
libsnark/relations/constraint_satisfaction_problems/uscs/: BUILD.bazel
libsnark/relations/constraint_satisfaction_problems/uscs/examples/: BUILD.bazel
libsnark/relations/ram_computations/memory/: BUILD.bazel
libsnark/relations/ram_computations/memory/examples/: BUILD.bazel
libsnark/relations/ram_computations/rams/: BUILD.bazel
libsnark/relations/ram_computations/rams/examples/: BUILD.bazel
libsnark/relations/ram_computations/rams/fooram/: BUILD.bazel
libsnark/relations/ram_computations/rams/tinyram/: BUILD.bazel
libsnark/zk_proof_systems/pcd/r1cs_pcd/: BUILD.bazel
libsnark/zk_proof_systems/pcd/r1cs_pcd/compliance_predicate/: BUILD.bazel
libsnark/zk_proof_systems/pcd/r1cs_pcd/r1cs_mp_ppzkpcd/: BUILD.bazel
libsnark/zk_proof_systems/pcd/r1cs_pcd/r1cs_sp_ppzkpcd/: BUILD.bazel
libsnark/zk_proof_systems/ppzkadsnark/r1cs_ppzkadsnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzkadsnark/r1cs_ppzkadsnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/bacs_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/bacs_ppzksnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/bacs_ppzksnark/profiling/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/bacs_ppzksnark/tests/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/profiling/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/tests/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/profiling/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/tests/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_se_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_se_ppzksnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_se_ppzksnark/profiling/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/r1cs_se_ppzksnark/tests/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark/examples/: BUILD.bazel  BUILD.bazelx
libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark/profiling/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark/tests/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/tbcs_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/tbcs_ppzksnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/tbcs_ppzksnark/profiling/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/tbcs_ppzksnark/tests/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/uscs_ppzksnark/: BUILD.bazel
libsnark/zk_proof_systems/ppzksnark/uscs_ppzksnark/examples/: BUILD.bazel
libsnark/zk_proof_systems/zksnark/ram_zksnark/: BUILD.bazel
tinyram_examples/: BUILD.bazel
(+20 files in other folders)
