load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "gadgetlib2",
    visibility = ["//visibility:public"],
    srcs = [
        "adapters.cpp",
        "adapters.hpp",
        "constraint.cpp",
        "constraint.hpp",
        "gadget.cpp",
        "gadget.hpp",
        "gadgetMacros.hpp",
        "infrastructure.cpp",
        "infrastructure.hpp",
        "integration.cpp",
        "integration.hpp",
        "pp.cpp",
        "pp.hpp",
        "protoboard.cpp",
        "protoboard.hpp",
        "variable.cpp",
        "variable.hpp",
        "variable_operators.hpp",
    ],
    hdrs = glob([".hpp"]),
    linkstatic = True,
    copts = ["-I."],
    deps = ["//libsnark/relations/constraint_satisfaction_problems/r1cs",
            "@libff//libff"]
)

cc_library(
    name = "examples",
    visibility = ["//visibility:public"],
    srcs = ["examples/simple_example.cpp", "examples/simple_example.hpp"],
    hdrs = ["examples/simple_example.hpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [
        ":gadgetlib2",
        # "//libff/common/default_types",
        "//libsnark/relations/constraint_satisfaction_problems/r1cs:examples"
    ]
)



cc_test(
    name = "adapters_test",
    visibility = ["//visibility:public"],
    srcs = ["tests/adapters_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [":gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "constraint_test",
    visibility = ["//visibility:public"],
    srcs = ["tests/constraint_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [":gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "gadget_test",
    visibility = ["//visibility:public"],
    srcs = ["tests/gadget_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [":gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "integration_test",
    visibility = ["//visibility:public"],
    srcs = ["tests/integration_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [":gadgetlib2",
            ":examples",
            "//libsnark/common/default_types",
            "//libsnark/relations/constraint_satisfaction_problems/r1cs:examples",
            "//libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark:examples",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "protoboard_test",
    visibility = ["//visibility:public"],
    srcs = ["tests/protoboard_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [":gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "variable_test",
    visibility = ["//visibility:public"],
    srcs = ["tests/variable_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = [":gadgetlib2",
            "@gtest//:gtest_main"]
)
