load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "knowledge_commitment",
    visibility = ["//visibility:public"],
    hdrs = ["kc_multiexp.hpp", "kc_multiexp.tcc",
            "knowledge_commitment.hpp", "knowledge_commitment.tcc"],
    deps = ["//libsnark/common/data_structures",
            "@libff//libff"]
)

