load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "routing_algorithms",
    visibility = ["//visibility:public"],
    srcs = glob(["*.cpp", "*.hpp"]),
    hdrs = glob([".hpp"]),
    copts = ["-I."],
    deps = ["//libsnark/common/data_structures",
            "@libff//libff"]
)

cc_binary(
    name = "profiling",
    visibility = ["//visibility:public"],
    srcs = ["profiling/profile_routing_algorithms.cpp"],
    copts = ["-I."],
    deps = [":routing_algorithms",
            "@libff//libff"]
)
