load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "routing_algorithms",
    visibility = ["//visibility:public"],
    srcs = glob(["*.cpp", "*.hpp"]),
    hdrs = glob([".hpp"]),
    copts = ["-I.", "-Iexternal/libsnark"],
    deps = ["//libsnark/common/data_structures",
            "@libff//libff"]
)
