load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "tutorial",
    srcs = [
        "tutorial.cpp",
    ],
    copts = ["-I.", "-Iexternal/libsnark", "-Iexternal/libff"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        ":examples",
        "//libsnark/gadgetlib2",
        # "//libff/common/default_types",
        "//libsnark/relations/constraint_satisfaction_problems/r1cs/examples",
        "//libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/examples",
        "@gtest//:gtest_main"
    ],
)

cc_library(
    name = "examples",
    srcs = [
        "simple_example.cpp",
    ],
    hdrs = ["simple_example.hpp"],
    copts = ["-I.", "-Iexternal/libsnark", "-Iexternal/libff"],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "@libsnark//libsnark/gadgetlib2",
        "@libsnark//libsnark/relations/constraint_satisfaction_problems/r1cs/examples",
        "@libsnark//libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/examples",
        # "@libfqfft//libfqfft",
        # "//libff/common/default_types",
        "@gtest//:gtest_main"
    ],
)
