load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "adapters",
    visibility = ["//visibility:public"],
    srcs = ["adapters_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = ["//libsnark/gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "constraint",
    visibility = ["//visibility:public"],
    srcs = ["constraint_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = ["//libsnark/gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "gadget",
    visibility = ["//visibility:public"],
    srcs = ["gadget_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = ["//libsnark/gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "integration",
    visibility = ["//visibility:public"],
    srcs = ["integration_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = ["//libsnark/gadgetlib2",
            "//libsnark/gadgetlib2/examples",
            "//libsnark/common/default_types",
            "//libsnark/relations/constraint_satisfaction_problems/r1cs/examples",
            "//libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/examples",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "protoboard",
    visibility = ["//visibility:public"],
    srcs = ["protoboard_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = ["//libsnark/gadgetlib2",
            "@gtest//:gtest_main"]
)

cc_test(
    name = "variable",
    visibility = ["//visibility:public"],
    srcs = ["variable_UTEST.cpp"],
    copts = ["-I."],
    linkstatic = True,
    deps = ["//libsnark/gadgetlib2",
            "@gtest//:gtest_main"]
)
