cc_library(
    name = "curves",
    visibility = ["//visibility:public"],
    hdrs = ["weierstrass_g1_gadget.hpp",
            "weierstrass_g1_gadget.tcc",
            "weierstrass_g2_gadget.hpp",
            "weierstrass_g2_gadget.tcc"
    ],
    deps = [
        "//libsnark/gadgetlib1",
        "//libsnark/gadgetlib1/gadgets/pairing",
        "@libff//libff",
    ]
)


