load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "hashes",
    visibility = ["//visibility:public"],
    hdrs = ["digest_selector_gadget.hpp",
            "digest_selector_gadget.tcc",
            "hash_io.hpp", "hash_io.tcc"],
    deps = ["//libsnark/gadgetlib1/gadgets"]
)

cc_library(
    name = "crh_gadget",
    visibility = ["//visibility:public"],
    hdrs = ["crh_gadget.hpp"],
    deps = ["//libsnark/gadgetlib1/gadgets/hashes/knapsack"]
)
