load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "set_commitment",
    visibility = ["//visibility:public"],
    hdrs = ["set_commitment_gadget.hpp",
            "set_commitment_gadget.tcc",
            "set_membership_proof_variable.hpp",
            "set_membership_proof_variable.tcc"],
    deps = [
        "//libsnark/gadgetlib1",
        "//libsnark/gadgetlib1/gadgets",
        "//libsnark/gadgetlib1/gadgets/hashes",
        "//libsnark/gadgetlib1/gadgets/merkle_tree",
    ]
)

cc_binary(
    name = "tests",
    visibility = ["//visibility:public"],
    srcs = ["tests/test_set_commitment_gadget.cpp"],
    copts = ["-I."],
    deps = [
        #ifdef CURVE_BN128
        #include <libff/algebra/curves/bn128/bn128_pp.hpp>
        #endif
        "//libsnark/gadgetlib1/gadgets/hashes/sha256",
        ":set_commitment",
        "@libff//libff"
    ]
)

