load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "verifiers",
    visibility = ["//visibility:public"],
    hdrs = ["r1cs_ppzksnark_verifier_gadget.hpp",
            "r1cs_ppzksnark_verifier_gadget.tcc"],
    deps = []
)

cc_binary(
    name = "tests",
    visibility = ["//visibility:public"],
    srcs = ["test_r1cs_ppzksnark_verifier_gadget.cpp"],
    deps = []
)



