load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bzl/config:vars.bzl", "CXXFLAGS")

cc_library(
    name = "verifiers",
    hdrs = [
        "r1cs_ppzksnark_verifier_gadget.hpp",
        "r1cs_ppzksnark_verifier_gadget.tcc",
    ],
    copts = CXXFLAGS + ["-I.", "-Iexternal/libsnark"],
    visibility = ["//visibility:public"],
    deps = [],
)
