load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "examples",
    srcs = ["demo_arithmetization.cpp"],
    copts = ["-I.", "-Iexternal/libsnark", "-Iexternal/libff"],
    visibility = ["//visibility:public"],
    deps = [
        "@libff//libff/common:profiling",
        "@libff//libff/common/default_types",
        "@libsnark//libsnark/common/default_types",
        "@libsnark//libsnark/reductions/ram_to_r1cs",
        "@libsnark//libsnark/relations/ram_computations/rams/tinyram",
        "@libsnark//libsnark/zk_proof_systems/ppzksnark/ram_ppzksnark",
        "@boost//:program_options",
    ],
)
