load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "sap",
    visibility = ["//visibility:public"],
    copts = ["-I."],
    hdrs = ["sap.hpp", "sap.tcc"],
    deps = ["@libfqfft//libfqfft"]
)

cc_binary(
    name = "tests",
    visibility = ["//visibility:public"],
    srcs = ["tests/test_sap.cpp"],
    copts = ["-I."],
    deps = [
        "//libsnark/reductions/r1cs_to_sap",
        "//libsnark/relations/constraint_satisfaction_problems/r1cs:examples",
        "@libff//libff"
    ]
)

