load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "bacs",
    visibility = ["//visibility:public"],
    hdrs = ["bacs.hpp", "bacs.tcc"]
)

cc_library(
    name = "examples",
    visibility = ["//visibility:public"],
    hdrs = ["examples/bacs_examples.hpp",
            "examples/bacs_examples.tcc"],
    deps = [
        "//libsnark/relations/circuit_satisfaction_problems/bacs"
    ]
)

