load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "tbcs",
    visibility = ["//visibility:public"],
    srcs = ["tbcs.cpp", "tbcs.hpp"],
    hdrs = ["tbcs.hpp"],
    copts = ["-I.", "-Iexternal/libsnark"],
    deps = ["@libsnark//libsnark/relations",
            "@libff//libff"]
)


